--- a/layouts/partials/sidebar/site-bio.html
+++ b/layouts/partials/sidebar/site-bio.html
@@ -1,24 +1,8 @@
 {{ if $.Param "enableBio" }}
 <section class="bio">
-  <hr class="hr-slash bio-hr"/>
-  <div class="bio__photo-wrapper">    
-    {{ $src := "" }}
-    {{ if site.Params.useGravatar }}    
-      {{ $src = printf "https://s.gravatar.com/avatar/%s?s=200" (md5 .Site.Params.email) }}
-      <img src="{{ $src }}" alt="{{ if .Site.Params.myname }}{{ .Site.Params.myname }}{{ else }}Avatar{{ end }}" class="bio__photo"/>
-    {{ else }}
-      {{ if (fileExists "static/images/whoami/avatar.png") }}
-        <img data-src="{{ "images/whoami/avatar.png" | relURL }}" alt="{{ if .Site.Params.myname }}{{ .Site.Params.myname }}{{ else }}Avatar{{ end }}" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='24pt' height='24pt' viewBox='0 0 24 24' version='1.1'%3E%3Cg id='surface1035795'%3E%3Cpath style=' stroke:none;fill-rule:nonzero;fill:rgb(80%25,80%25,80%25);fill-opacity:1;' d='M 4 4 C 2.90625 4 2 4.90625 2 6 L 2 18 C 2 19.09375 2.90625 20 4 20 L 20 20 C 21.09375 20 22 19.09375 22 18 L 22 6 C 22 4.90625 21.09375 4 20 4 Z M 4 6 L 20 6 L 20 18 L 4 18 Z M 4 6 '/%3E%3C/g%3E%3C/svg%3E%0A" class="lazyload bio__photo"/>
-      {{ else if (fileExists "static/images/whoami/avatar.jpg") }}
-        <img data-src="{{ "images/whoami/avatar.jpg" | relURL }}" alt="{{ if .Site.Params.myname }}{{ .Site.Params.myname }}{{ else }}Avatar{{ end }}" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='24pt' height='24pt' viewBox='0 0 24 24' version='1.1'%3E%3Cg id='surface1035795'%3E%3Cpath style=' stroke:none;fill-rule:nonzero;fill:rgb(80%25,80%25,80%25);fill-opacity:1;' d='M 4 4 C 2.90625 4 2 4.90625 2 6 L 2 18 C 2 19.09375 2.90625 20 4 20 L 20 20 C 21.09375 20 22 19.09375 22 18 L 22 6 C 22 4.90625 21.09375 4 20 4 Z M 4 6 L 20 6 L 20 18 L 4 18 Z M 4 6 '/%3E%3C/g%3E%3C/svg%3E%0A" class="lazyload bio__photo"/>
-      {{ else if (fileExists "static/images/whoami/avatar.svg") }}
-        <img data-src="{{ "images/whoami/avatar.svg" | relURL }}" alt="{{ if .Site.Params.myname }}{{ .Site.Params.myname }}{{ else }}Avatar{{ end }}" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='24pt' height='24pt' viewBox='0 0 24 24' version='1.1'%3E%3Cg id='surface1035795'%3E%3Cpath style=' stroke:none;fill-rule:nonzero;fill:rgb(80%25,80%25,80%25);fill-opacity:1;' d='M 4 4 C 2.90625 4 2 4.90625 2 6 L 2 18 C 2 19.09375 2.90625 20 4 20 L 20 20 C 21.09375 20 22 19.09375 22 18 L 22 6 C 22 4.90625 21.09375 4 20 4 Z M 4 6 L 20 6 L 20 18 L 4 18 Z M 4 6 '/%3E%3C/g%3E%3C/svg%3E%0A" class="lazyload bio__photo"/>
-      {{ else }}
-        <img data-src="{{ "images/whoami/avatar.jpg" | relURL }}" alt="{{ if .Site.Params.myname }}{{ .Site.Params.myname }}{{ else }}Avatar{{ end }}" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='24pt' height='24pt' viewBox='0 0 24 24' version='1.1'%3E%3Cg id='surface1035795'%3E%3Cpath style=' stroke:none;fill-rule:nonzero;fill:rgb(80%25,80%25,80%25);fill-opacity:1;' d='M 4 4 C 2.90625 4 2 4.90625 2 6 L 2 18 C 2 19.09375 2.90625 20 4 20 L 20 20 C 21.09375 20 22 19.09375 22 18 L 22 6 C 22 4.90625 21.09375 4 20 4 Z M 4 6 L 20 6 L 20 18 L 4 18 Z M 4 6 '/%3E%3C/g%3E%3C/svg%3E%0A" class="lazyload bio__photo"/>
-      {{ end }}      
-    {{ end }}
+  <div class="bio__photo-wrapper">
+    {{ partial "imglazy" (dict "path" "whoami/avatar.jpg" "class" "bio__photo") }}
   </div>
-  <hr class="hr-slash bio-hr"/>
   <div class="bio__name">
     {{ .Site.Params.myname }}
   </div>
@@ -26,32 +10,34 @@
     {{ .Site.Params.whoami }}
   </div>
   
-  {{ if .Site.Params.organization }}
-  <div class="bio__info">
-    <div class="bio__info--icon">
-      {{ partial "svgs/etc/people.svg" (dict "width" 20 "height" 20) }}
+  <div class="bio__info-wrapper">
+    {{ if .Site.Params.organization }}
+    <div class="bio__info">
+      <div class="bio__info--icon">
+        {{ partial "svgs/etc/people.svg" (dict "width" 20 "height" 20) }}
+      </div>
+      {{ .Site.Params.organization }}
     </div>
-    {{ .Site.Params.organization }}
-  </div>
-  {{ end }}
+    {{ end }}
 
-  {{ if .Site.Params.location }}
-  <div class="bio__info">
-    <div class="bio__info--icon">
-      {{ partial "svgs/etc/location.svg" (dict "width" 20 "height" 20) }}
+    {{ if .Site.Params.location }}
+    <div class="bio__info">
+      <div class="bio__info--icon">
+        {{ partial "svgs/etc/location.svg" (dict "width" 20 "height" 20) }}
+      </div>
+      {{ .Site.Params.location }}
     </div>
-    {{ .Site.Params.location }}
-  </div>
-  {{ end }}
+    {{ end }}
 
-  {{ if .Site.Params.email }}
-  <div class="bio__info">
-    <div class="bio__info--icon">      
-      {{ partial "svgs/social/email.svg" (dict "width" 20 "height" 20) }}
+    {{ if .Site.Params.email }}
+    <div class="bio__info">
+      <div class="bio__info--icon">      
+        {{ partial "svgs/social/email.svg" (dict "width" 20 "height" 20) }}
+      </div>
+      <a href="mailto:{{ .Site.Params.email }}">{{ .Site.Params.email }}</a>    
     </div>
-    <a href="mailto:{{ .Site.Params.email }}">{{ .Site.Params.email }}</a>    
+    {{ end }}
   </div>
-  {{ end }}
 
   {{ if .Site.Params.link }}
   <div class="bio__info">
